# discord-maths-bot

./: Cargo.toml  README.md
src/: main.rs
