[package]
name = "koder-jam-9-05-23"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
shunting = "0.1.2"
serenity = {default-features = false, features = ["client", "gateway", "rustls_backend", "model"] }
tokio = { version = "1.28.0",  features=["full"]}
no-panic = "0.1.22"

[profile.dev]
opt-level = 1